Export area,regions,super regions, continents + more dds for windows